it will fix the white spacing on the footers

--- a/style.css
+++ b/style.css
@@ -121,6 +121,9 @@ label {
   float: right;
   margin-right: 5vw;
   padding: 1%;
+  background-color: #c750f1;
+  color: #ffff;
+  font-size: 2.5vh;
 }
 
 .lower-footer {
@@ -128,11 +131,17 @@ label {
   background-color: #c750f126;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   color: #ffff;
-  justify-content: space-evenly;
+  padding-left: 10vw;
+  padding-right: 10vw;
 }
 
 .lower-footer h6 {
   font-size: 2.5vh;
+  font-weight: lighter;
+}
+
+.lower-footer p {
+  font-size: 2.7vh;
 }
